--- a/styles/style.css
+++ b/styles/style.css
@@ -19,8 +19,15 @@ h5 {
 }
 h1 {
   font-size: 96px;
+  line-height: 1.5;
 }
-
+h2 {
+  font-size: 64px;
+}
+p {
+  font-size: 16px;
+  line-height: 30px;
+}
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -46,4 +53,32 @@ h1 {
   font-size: 18px;
   line-height: 27px;
   padding: 18px 30px;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 18px 30px;
+}
+.project-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
