--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,22 @@ p {
 .project-description {
   padding: 120px 60px;
 }
+.about-section {
+  padding: 160px 20px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.about-section-content {
+  margin: 30px;
+}
 
 @media (max-width: 900px) {
   h1 {
@@ -78,6 +94,10 @@ p {
     padding: 80px 20px;
   }
   .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  .about-section {
     padding: 0;
     text-align: center;
   }
