--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,29 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -93,6 +116,10 @@ p {
   margin: 30px;
 }
 
+.logo {
+  max-height: 40px;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -100,6 +127,9 @@ p {
   }
   h2 {
     font-size: 44px;
+  }
+  nav a {
+    font-size: 14px;
   }
   .hero {
     padding: 80px 20px;
