--- a/styles/style.css
+++ b/styles/style.css
@@ -24,6 +24,9 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4 {
+  font-size: 48px;
+}
 p {
   font-size: 16px;
   line-height: 30px;
@@ -50,6 +53,9 @@ nav a {
 nav a:hover,
 nav li.active a {
   color: var(--branding-color);
+}
+footer {
+  margin: 60px 0;
 }
 .hero {
   background: var(--secondary-color);
@@ -119,6 +125,35 @@ nav li.active a {
 .logo {
   max-height: 40px;
 }
+.email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+.email-link:hover {
+  color: var(--branding-color);
+}
+.social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 14px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+.social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+.contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+.contact-box p {
+  margin: 0;
+}
 
 @media (max-width: 900px) {
   h1 {
@@ -127,6 +162,9 @@ nav li.active a {
   }
   h2 {
     font-size: 44px;
+  }
+  h4 {
+    font-size: 26px;
   }
   nav a {
     font-size: 14px;
