--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   --secondary-color: #f9f7fe;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
+  --navbar-font-family: "Kaushan Script", cursive;
 }
 body {
   font-family: var(--default-font-family);
@@ -56,6 +57,15 @@ nav li.active a {
 }
 footer {
   margin: 60px 0;
+}
+.x {
+  margin-right: 20px;
+}
+.name {
+  font-size: 22px;
+  font-family: var(--navbar-font-family);
+  line-height: 42px;
+  margin-left: 20px;
 }
 .hero {
   background: var(--secondary-color);
@@ -122,9 +132,6 @@ footer {
   margin: 30px;
 }
 
-.logo {
-  max-height: 40px;
-}
 .email-link {
   text-decoration: none;
   color: black;
