--- a/styles/style.css
+++ b/styles/style.css
@@ -58,9 +58,6 @@ nav li.active a {
 footer {
   margin: 60px 0;
 }
-.x {
-  margin-right: 20px;
-}
 .name {
   font-size: 22px;
   font-family: var(--navbar-font-family);
@@ -70,7 +67,7 @@ footer {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 80px 20px;
+  padding: 90px 20px;
 }
 .hero p {
   font-size: 36px;
@@ -105,7 +102,7 @@ footer {
   padding: 120px 60px;
 }
 .content-section {
-  padding: 60px 20px;
+  padding: 90px 20px;
 }
 .content h1 {
   font-size: 64px;
@@ -181,7 +178,7 @@ footer {
     text-align: center;
   }
   .content-section {
-    padding: 0;
+    padding-top: 30px;
     text-align: center;
   }
 }
