--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,10 @@ footer {
   line-height: 2;
   color: #272142;
 }
+.project-header {
+  padding: 20px 20px 10px;
+  text-align: center;
+}
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
