--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 :root {
-  --branding-color: #6c63ff;
-  --secondary-color: #f9f7fe;
+  --branding-color: #699ad7;
+  --secondary-color: #f8f9fa;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
   --navbar-font-family: "Kaushan Script", cursive;
@@ -45,24 +45,30 @@ nav li {
   line-height: 42px;
   margin-left: 15px;
 }
-nav a {
+nav a,
+h3 a {
   text-decoration: none;
   color: #272142;
   transition: all 100ms ease-in-out;
 }
 
 nav a:hover,
+h3 a:hover,
 nav li.active a {
   color: var(--branding-color);
 }
 footer {
   margin: 60px 0;
 }
+a {
+  color: var(--branding-color);
+}
 .name {
   font-size: 22px;
   font-family: var(--navbar-font-family);
   line-height: 42px;
   margin-left: 20px;
+  color: var(--branding-color);
 }
 .hero {
   background: var(--secondary-color);
@@ -86,6 +92,9 @@ footer {
   padding: 20px 20px 10px;
   text-align: center;
 }
+.project-description {
+  padding: 120px 60px;
+}
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -102,9 +111,7 @@ footer {
   line-height: 27px;
   padding: 18px 30px;
 }
-.project-description {
-  padding: 120px 60px;
-}
+
 .content-section {
   padding: 90px 20px;
 }
@@ -175,9 +182,16 @@ footer {
   text-align: center;
   padding: 0px;
 }
+.code {
+  font-size: 12px;
+}
+.social {
+  text-decoration: none;
+}
 
 @media (max-width: 900px) {
-  h1 {
+  h1,
+  .content h1 {
     font-size: 44px;
     line-height: 2;
   }
